--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <packaging>pom</packaging>
+
   <modules>
     <module>api</module>
     <module>auth-service</module>
     <module>cart-service</module>
     <module>core-service</module>
     <module>front-service</module>
-    <module>gatewey-service</module>
+    <module>gateway-service</module>
   </modules>
 
   <groupId>ru.kremenia.market</groupId>
